update firts, wine, strains

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+<ul>
+  <li><%= link_to 'Wine', wines_path %></li>
+  <li><%= link_to 'Strain', strains_path %></li>
+</ul>
     <%= yield %>
   </body>
 </html>
